# ton-python-

./: .gitignore  main.py  pyproject.toml  test_tl.py  tonapi.py  tonlibapi.py
src/: install.py  key.py  network.py  zerostate.py
tests/: test_tl.py
tests/data/: config.json
tl/: binary_reader.py  gen.py  tlobject.py
tl/generator/: sourcebuilder.py  utils.py
tl/generator/generators/: __init__.py  tlobject.py
tl/generator/parsers/: __init__.py
tl/generator/parsers/tlobject/: __init__.py  parsedtlobject.py  parser.py  tlarg.py
